--- a/src/View/Users/user.html.twig
+++ b/src/View/Users/user.html.twig
@@ -1,8 +1,12 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
-	{% for user in users %}
-		<a href="/user/show/{{ user.ID }}">{{ user.ID }}</a> {{ user.firstname }} ton email: {{ user.email }} <br/>
-	{% endfor %}
-	<a href="/user/add"=>Ajouter</a>
+    {% for user in users %}
+        <a href="/user/show/{{ user.ID }}">{{ user.ID }}</a>
+        {{ user.firstname }}
+        ton email:
+        {{ user.email }}
+        points
+        {{ user.points }}<br/>
+    {% endfor %}
+    <a href="/user/add"=>Ajouter</a>
 {% endblock %}
-
