--- a/src/View/Users/login.html.twig
+++ b/src/View/Users/login.html.twig
@@ -15,7 +15,7 @@
         <a href="" target="_blank">See the last newsletter</a>
     </p>
     {% if errorConnection == true %}
-        <p class="text-success" style="font-size:30pt;color:red;text-decoration:underline overline;text-decoration-color:purple;">Wrong passw<span style="font-size: 50pt;color: yellow;">o</span>rd !!!!!!</p>
+        <p class="text-success" style="font-size:30pt;color:red;text-decoration:underline overline;text-decoration-color:purple;">Wrong passw<span style="font-size: 50pt;color: yellow;">o</span>rrrrd !!!!!!</p>
     {% endif %}
     <!-- Name -->
     <input type="text" id="defaultSubscriptionFormPassword" class="form-control mb-4" placeholder="Username" name="username">
