--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,75 +1,15 @@
-{% extends 'layout.html.twig' %}
-
-{% block content %}
-    <div>
-        <img alt="" class="resize" src="https://3ncridad6ai1jg5mt30vexk1-wpengine.netdna-ssl.com/wp-content/uploads/2018/03/GettyImages-933072162-2500x1405.jpg">
-    </div>
+{% extends "layout.html.twig" %}
+{% block title %}
+    <p>
+        titre
+    </p>
+{% endblock %}
+{% block banner %}
+    {% include 'Block/banner.html.twig' %}
+{% endblock %}
+{% block test %}
+    {% include 'Egg/userEggs.html.twig' %}
 {% endblock %}
 {% block tableau %}
-    <div class="container row no-gutters col-6 float-left">
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">
-                        {{ eggs }}
-                    </th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container row no-gutters col-6 float-right">
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    {% include 'Block/table.html.twig' %}
 {% endblock %}
