--- a/src/View/Block/table.html.twig
+++ b/src/View/Block/table.html.twig
@@ -1,64 +1,44 @@
 {% block tableau %}
-    <div class="container row no-gutters col-6 float-left">
+    <div class="container">
         <table class="table table-dark">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col"></th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Top 5</th>
+                    <th scope="col">Joueur</th>
+                    <th scope="col">Nb Eggs</th>
+                    <th scope="col">Points</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
                     <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>35</td>
+                    <td>560</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
+                    <td>Patrick</td>
+                    <td>31</td>
+                    <td>430</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
+                    <td>jeam</td>
+                    <td>18</td>
+                    <td>320</td>
                 </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container row no-gutters col-6 float-right">
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                 <tr>
+                    <th scope="row">4</th>
+                    <td>Paul</td>
+                    <td>12</td>
+                    <td>160</td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
+                    <th scope="row">5</th>
+                    <td>Jules</td>
+                    <td>11</td>
+                    <td>140</td>
                 </tr>
             </tbody>
         </table>
